--- a/Dashboard/index.html
+++ b/Dashboard/index.html
@@ -23,18 +23,60 @@
       <svg id="graph"></svg>
     </div>
 
+    <!-- Right side: ONLY inputs -->
     <aside id="right">
-      <h2>Selection</h2>
-      <div id="panel">
-        <div class="muted">Nothing selected yet.</div>
+      <h2>Input variables</h2>
+      <div class="muted" style="margin-bottom:10px;">
+        Use the sliders to adjust assumptions. Changes affect the quantified relationships shown below.
       </div>
+
+      <div id="sliders" class="sliders"></div>
 
       <div class="buttons">
         <button id="resetBtn">Reset</button>
       </div>
     </aside>
+
+    <!-- Bottom: Formula panel (always visible) -->
+    <section id="drawer" class="drawer" aria-hidden="false">
+      <div class="drawer-header">
+        <div id="drawerTitle" class="drawer-title">Formula details</div>
+      </div>
+
+      <div class="drawer-body">
+        <!-- Left column -->
+        <div class="drawer-col">
+          <div class="k">Selected relationship</div>
+          <div id="drawerEdge" class="drawer-text muted">Click an edge to view its quantification.</div>
+
+          <div class="k" style="margin-top:10px;">Formula</div>
+          <pre id="drawerFormula" class="drawer-formula">—</pre>
+
+          <div class="k" style="margin-top:10px;">Explanation</div>
+          <div id="drawerExplanation" class="drawer-text muted">—</div>
+
+          <div class="k" style="margin-top:10px;">Sources</div>
+          <ul id="drawerSources" class="drawer-sources"></ul>
+        </div>
+
+        <!-- Right column: Quantification / variables -->
+        <div class="drawer-col">
+          <div class="k">Quantification</div>
+          <div class="muted" style="margin-bottom:10px;">
+            Variables used in the function, with a short description and default (starting) value.
+          </div>
+
+          <div id="drawerVars" class="vars">
+            <!-- JS should populate variable rows here -->
+            <div class="vars-empty muted">—</div>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
 
   <script src="graph.js"></script>
 </body>
 </html>
+
+
