--- a/Dashboard/index.html
+++ b/Dashboard/index.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Causal Diagram Dashboard (D3)</title>
 
-  <!-- Use LOCAL D3 to avoid CDN caching + offline surprises -->
   <script src="d3.v7.min.js"></script>
+  <!-- Use LOCAL D3 to avoid CDN caching + offline surprises -->
   <link rel="stylesheet" href="style_positions_v2.css" />
 </head>
 
@@ -106,7 +106,8 @@
 
 </main>
 
-  <script src="graph_positions_v3.js"></script>
+  <script src="d3.v7.min.js"></script>
+  <script src="graph_positions_v10_many_formulas.js"></script>
 </body>
 </html>
 
