--- a/Dashboard/index.html
+++ b/Dashboard/index.html
@@ -128,7 +128,7 @@
 </main>
 
   <script src="d3.v7.min.js"></script>
-  <script src="graph_new.js"></script>
+  <script src="graph_new_node_baseline_SAFE.js"></script>
 </body>
 </html>
 
