--- a/Dashboard/index.html
+++ b/Dashboard/index.html
@@ -4,18 +4,17 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Causal Diagram Dashboard (D3)</title>
-
-  <script src="d3.v7.min.js"></script>
-  <!-- Use LOCAL D3 to avoid CDN caching + offline surprises -->
-  <link rel="stylesheet" href="style_new.css" />
+<!-- Use LOCAL D3 to avoid CDN caching + offline surprises -->
+  <link rel="stylesheet" href="style_positions_v3_fixed2.css" />
 </head>
 
 <body>
   <header>
     <h1>Causal Relationship Dashboard</h1>
     <div class="hint">
-      Click a <b>node</b> to highlight connected edges + downstream path and resize by influence.
-      Click an <b>edge</b> to show its formula.
+      <b>How to edit:</b>
+      Click an <b>edge</b> to edit its formula, compute code, explanation and sources (bottom-left) and its parameters (bottom-right).
+      Click a <b>node</b> to edit its <b>initial value / baseline</b> (right panel).
     </div>
   </header>
 
@@ -63,6 +62,20 @@
         <div class="tiny" id="buildTag"></div>
       </div>
 
+      <div id="nodeEditor" class="slider-card" style="display:none">
+  <div class="slider-title" id="nodeEditorTitle">Selected node</div>
+  <div class="slider-subtitle" id="nodeEditorSubtitle">—</div>
+
+  <div class="drawer-section" style="margin-top:10px">
+    <div class="drawer-label" id="nodeBaselineLabel">Initial value</div>
+    <div class="tiny" id="nodeBaselineHint">—</div>
+    <div class="row-actions" style="justify-content:flex-start; gap:10px; margin-top:8px">
+      <input id="nodeBaselineInput" type="number" class="numinput" style="width: 160px" />
+      <button id="applyNodeBaselineBtn" class="btn btn-secondary btn-small">Apply</button>
+    </div>
+  </div>
+</div>
+
       <div id="sliders"></div>
     </aside>
 
@@ -80,7 +93,7 @@
 
         <div class="drawer-section">
           <div class="drawer-label">Formula</div>
-          <pre id="drawerFormula" class="codebox">—</pre>
+          <textarea id="drawerFormulaEditor" class="codeedit" rows="3" spellcheck="false" placeholder="Human-readable formula (can include symbols)"></textarea>
         </div>
 
       <div class="drawer-section">
@@ -94,17 +107,22 @@
           <button id="applyComputeExprBtn" class="btn btn-secondary btn-small">Apply</button>
           <button id="syncUsesBtn" class="btn btn-secondary btn-small" title="Parse variables from the expression and update sliders">Sync variables</button>
         </div>
+        <div class="row-actions" style="margin-top:10px">
+          <button id="applyEdgeMetaBtn" class="btn btn-secondary btn-small" title="Apply formula/explanation/sources edits to the model">Apply details</button>
+        </div>
       </div>
 
         <div class="drawer-section">
           <div class="drawer-label">Explanation</div>
-          <div id="drawerExplanation" class="drawer-value">—</div>
+          <textarea id="drawerExplanationEditor" class="codeedit" rows="3" spellcheck="false" placeholder="Explain the relationship, assumptions, scope, units..."></textarea>
         </div>
 
         <div class="drawer-section">
-          <div class="drawer-label">Sources</div>
-          <ul id="drawerSources" class="sources"></ul>
-        </div>
+  <div class="drawer-label">Sources</div>
+  <div class="tiny">One URL (or citation) per line.</div>
+  <textarea id="drawerSourcesEditor" class="codeedit" rows="4" spellcheck="false" placeholder="https://...
+https://..."></textarea>
+</div>
       </div>
     </section>
 
@@ -126,9 +144,8 @@
     </section>
 
 </main>
-
   <script src="d3.v7.min.js"></script>
-  <script src="graph_new_node_baseline_SAFE.js"></script>
+<script src="graph_positions_v3_fixed2.js"></script>
 </body>
 </html>
 
