Initial value sliders en wat formules gefixed

--- a/Dashboard/index.html
+++ b/Dashboard/index.html
@@ -69,11 +69,11 @@
   <div class="drawer-section" style="margin-top:10px">
     <div class="drawer-label" id="nodeBaselineLabel">Initial value</div>
     <div class="tiny" id="nodeBaselineHint">—</div>
-    <div class="row-actions" style="justify-content:flex-start; gap:10px; margin-top:8px">
-      <input id="nodeBaselineInput" type="number" class="numinput" style="width: 160px" />
-      <button id="applyNodeBaselineBtn" class="btn btn-secondary btn-small">Apply</button>
+    <div class="slider-row" style="margin-top:8px">
+      <input id="nodeBaselineRange" type="range" />
+      <div class="slider-value" id="nodeBaselineValue">—</div>
     </div>
-  </div>
+</div>
 </div>
 
       <div id="sliders"></div>
@@ -145,7 +145,7 @@ https://..."></textarea>
 
 </main>
   <script src="d3.v7.min.js"></script>
-<script src="graph_positions_v3_fixed2.js"></script>
+<script src="graph_positions_v3_fixed2_baseline_slider_v3json_updated3.js"></script>
 </body>
 </html>
 
