--- a/Dashboard/index.html
+++ b/Dashboard/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Causal Diagram Dashboard (D3)</title>
 <!-- Use LOCAL D3 to avoid CDN caching + offline surprises -->
-  <link rel="stylesheet" href="style_positions_v3_fixed2.css" />
+  <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
@@ -145,7 +145,7 @@ https://..."></textarea>
 
 </main>
   <script src="d3.v7.min.js"></script>
-<script src="graph_positions_v3_fixed2_baseline_slider_v3json_updated3.js"></script>
+<script src="graph.js"></script>
 </body>
 </html>
 
